@@ -1,3 +1,8 @@
+2007-06-21  Brian Gough  <bjg@network-theory.co.uk>
+
+	* fp.c: allow universal binaries by checking __ppc__ and __i386__
+	preprocessor definitions on Darwin
+
 2007-04-23  Brian Gough  <bjg@network-theory.co.uk>
 
 	* fp-gnux86.c (gsl_ieee_set_mode): added support for MXCSR register
